# development-for-solana

./: .npmrc  Anchor.toml  INSTALL.md  README.md  package-lock.json  package.json
programs/01-donor-vault/: TASK.md
programs/01-donor-vault/src/: error.rs
programs/01-donor-vault/src/instructions/: donate.rs  initialize.rs  tier_of.rs
programs/01-donor-vault/src/state/: donation.rs  donor_record.rs  tier.rs  vault.rs
programs/02-staking/: TASK.md
programs/04-merkle-airdrop/: Cargo.toml  TASK.md
programs/04-merkle-airdrop/src/: constants.rs  error.rs  lib.rs
programs/04-merkle-airdrop/src/instructions/: claim.rs  claim_with_signature.rs  initialize.rs  mod.rs
programs/04-merkle-airdrop/src/state/: claim.rs  config.rs  mod.rs
programs/05-raffle/: Cargo.toml  TASK.md
programs/05-raffle/src/: constants.rs  error.rs  lib.rs
programs/05-raffle/src/instructions/: claim.rs  consume_randomness.rs  deposit.rs  initialize.rs  mod.rs  request_randomness.rs
programs/05-raffle/src/state/: entry.rs  mod.rs  raffle.rs
tests/01-donor-vault/: donor-vault.test.ts
tests/04-merkle-airdrop/: fixture.ts  merkle-airdrop.test.ts  merkle.ts  signatures.ts
tests/05-raffle/: fixture.ts  raffle.test.ts
tests/helpers/: assert.ts  bankrun.ts  bn.ts  index.ts  pda.ts
